--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -19,10 +19,10 @@ status-website:
   # baseUrl: /your-repo-name
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
   name: uptime
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
+  introTitle: "**Upptime** 是开源的正常运行时间监视器和状态页面，完全由 GitHub 提供支持。"
+  introMessage: 这是一个示例状态页面，它使用来自我们[GitHub 存储库](https://github.com/upptime/upptime)的**实时**数据。不需要使用服务器——只需 GitHub Actions、Issues和Pages提供服务。[**免费获取**](https://github.com/upptime/upptime)
   navbar:
-    - title: Status
+    - title: 状态
       href: /
     - title: GitHub
       href: https://github.com/$OWNER/$REPO
@@ -65,7 +65,7 @@ i18n:
   ms: 毫秒
   loading: 加载中
   navGitHub: GitHub
-  footer: gd1214b保留所有权利。 Copyright © 2021 gd1214b. All Rights Reserved.
+  footer: r3f保留所有权利。 Copyright © 2021 r3f. All Rights Reserved.
   rateLimitExceededTitle: 超出速率限制
   rateLimitExceededIntro: 您已超过一小时内可以执行的请求数，因此您必须等待才能再次访问此网站。或者，您可以添加 GitHub 个人访问令牌以继续使用本网站。
   rateLimitExceededWhatDoesErrorMean: 这个错误是什么意思？本网站使用 GitHub API 访问有关我们网站状态的实时数据。默认情况下，GitHub 允许每个 IP 地址每小时 60 个请求，您已经消耗了这些请求。
